Added Bootstrap installation

--- a/src/app/carlist/carlist.component.html
+++ b/src/app/carlist/carlist.component.html
@@ -11,7 +11,7 @@
 							<h5 class="card-title">{{car.modelName}}</h5>
 							<p class="card-text">Cost: €{{car.cost}}</p>
 							<p>
-								<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#" (click)="showModal(car.carid)">
+								<button type="button" class="btn btn-primary" data-toggle="modal" >
 									Details
 								</button>
 							</p>
