--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,3 @@
-<footer class="bg-dark text-light text-center">
+<footer class="bg-dark text-light text-center p-4">
 	&copy;2020 Car Rentals
 </footer>
