--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -23,7 +23,7 @@
 			<li class="nav-item pl-2">
 
 				<ng-template [ngIf]="clickCounter > 199">
-					<button type="button" class="btn btn-danger">VIP!</button>
+					<button type="button" class="btn btn-danger">VIP</button>
 				</ng-template>
 
 			</li>
